--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Preview Image (Open Graph) -->
+		<meta property="og:title" content="Tra Truong">
+		<meta property="og:description" content="Portfolio website of Tra Truong">
+		<meta property="og:image" content="https://raw.githubusercontent.com/TracieTruong/Portfolio/main/preview-image.png">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://tracietruong.github.io/Portfolio/">
 	</head>
 	<body class="is-preload">
 
@@ -37,12 +43,6 @@
     					<img src="images\Skills and Languages\DataWrapper.png" style="width:auto; height: 20px;" alt="">
 					</div>
 				</div>
-				<!-- Preview Image (Open Graph) -->
-				 <meta property="og:title" content="Tra Truong">
-				 <meta property="og:description" content="Portfolio website of Tra Truong">
-				 <meta property="og:image" content="https://github.com/TracieTruong/Portfolio/blob/main/preview-image.png">
-				 <meta property="og:type" content="website">
-				 <meta property="og:url" content="https://github.com/TracieTruong/Portfolio">
 			</header>
 
 		<!-- Main -->
