--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!-- Preview Image (Open Graph) -->
 		<meta property="og:title" content="Tra Truong">
-		<meta property="og:description" content="Portfolio website of Tra Truong">
+		<meta property="og:description" content="Portfolio of Tra Truong">
 		<meta property="og:image" content="https://raw.githubusercontent.com/TracieTruong/Portfolio/main/preview-image.png">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://tracietruong.github.io/Portfolio/">
@@ -505,3 +505,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
