--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 						<div class="design-row">
         					
 							<!-- Image 1 -->
-        					<a href="https://www.canva.com/design/DAG6qjNQS6k/jCBJUQlQ5zlJjBdXz5dRsQ/edit" class="hover-box">
+        					<a href="https://www.canva.com/design/DAG6qjNQS6k/jCBJUQlQ5zlJjBdXz5dRsQ/edit" target="_blank" class="hover-box">
             					<img src="images/Logo_full.png" alt="">
             					<div class="overlay">Logo</div>
         					</a>
 
         					<!-- Image 2 -->
-        					<a href="https://www.canva.com/design/DAG6o0Q8YAA/5okdmnQerkOi4KuMMD6EJw/edit" class="hover-box">
+        					<a href="https://www.canva.com/design/DAG6o0Q8YAA/5okdmnQerkOi4KuMMD6EJw/edit" target="_blank" class="hover-box">
             					<img src="images\preview-image.png" alt="">
             					<div class="overlay">Preview Image</div>
         					</a>
@@ -530,4 +530,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</script>
 
 	</body>
+
 </html>
