--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<header id="header">
 				<div class="inner">
 					<!-- Logo -->
-					<a href="https://www.canva.com/design/DAG6qjNQS6k/jCBJUQlQ5zlJjBdXz5dRsQ/edit?utm_content=DAG6qjNQS6k&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="logo">
+					<a class="logo">
 						<span class="symbol">
 							<img src="images/Skills and Languages/Logo.png" style="width:auto; height: 20px;" alt="" /></span>
 							<span style="font-size: 1.8rem; font-weight: 700;" class="title"><strong style="color:#4C251E;">Portfolio</strong></span>
@@ -532,3 +532,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
